addkng issue, display new Term ID